--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@font-face {
+    font-family:Vina ;
+    font-family:Anton;
+    src: url(fontes/VinaSans-Regular.ttf);
+    src: url(fontes/Anton-Regular.ttf);
+}
 /* CORES PARA A PAGINA:
    -#5372FF
    -#54A9FF
@@ -30,17 +36,25 @@ h1{
     width: 150px;
     margin:0;
     text-shadow: 3px 2px 9px rgba(0, 0, 0, 0.496);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 .left-text{
     padding-left: 10px;
     width: 175px;
     height: 20px;
     text-shadow: 3px 2px 9px rgba(0, 0, 0, 0.496);
+    font-family:Anton;
+    font-weight: normal;
+    top: -10px;
+    position: relative;
 }
 .right-text{
     height: 20px;
     max-width: 200px;
     text-shadow: 3px 2px 9px rgba(0, 0, 0, 0.496);
+    font-family:Anton;
+    font-weight: normal;
 }
 nav{
     border: var(--borda);
@@ -154,5 +168,9 @@ section>a:hover{
     background-size: 100%; /* Redimensionar a imagem para caber no espaço */
     margin-right: 8px;
     vertical-align: middle;
+}
+.whats{
+    color: green;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.34);
 }
 
